# fedciv-lab-api

./: .gitignore  BACKLOG.md  Dockerfile  MOCK.md  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start-worker.sh  start.sh  test.sh  tox.ini
.github/workflows/: main-commit-pr.yml
api/: labapi.py  test_labapi.py
lab_api/: __init__.py  appliance.py  config.py  device.py  dnac.py  ise.py  lab_models.py  models.py  sdwan.py  services.py
lab_data/: testbed.yaml
mock_data/: appliances.yaml  dnac_maglev_restore_history  ise_show_restore_history  sb_testbed.yaml  testbed.yaml  vmanage_restore_log
mock_data/csr1/: csr1000v-1.yaml
mock_data/csr2/: csr1000v-2.yaml
scripts/: clean.sh  connect_dnac.py  deploy.sh  dnac_example.py  dnac_parse.py  docker_status.sh  obtainNGROKAddrUpdateWebhook.py  reload.py  restore_appliance.py  sdwan_example.py  validate_testbed.sh
tests/: Dockerfile  test_app.py  test_services.py
