[tool.poetry]
name = "fedciv-lab-api"
version = "0.1.0"
description = ""
authors = ["Yashar Asgari", "Sam Byers", "Paul Merlitti"]

[tool.poetry.dependencies]
python = "^3.10"
pyats = {extras = ["library"], version = "^22.2"}
fastapi = "^0.75.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
paramiko = "^2.10.3"
pandas = "^1.4.2"
openpyxl = "^3.0.9"
rq = "^1.10.1"
ciscoisesdk = "^2.0.1"
viptela = "^0.3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
tox = "^3.24.5"
black = "^22.3.0"
flake8 = "^4.0.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
